--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
     "framer-motion": "^12.4.1",
+    "motion": "^12.4.1",
     "openai": "^4.83.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
